// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repcombinator .combineTableResults() should correctly combine two reports 1`] = `
Object {
  "headers": Object {
    "dataid": Object {
      "column": "dataid",
      "hidden": true,
      "meta": true,
      "name": "Data ID",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "dataname": Object {
      "column": "dataname",
      "hidden": false,
      "meta": true,
      "name": "Data",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "live births_quarter1": Object {
      "column": "live births_quarter1",
      "hidden": false,
      "meta": false,
      "name": "Live births Jul to Sep 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "live births_quarter2": Object {
      "column": "live births_quarter2",
      "hidden": false,
      "meta": false,
      "name": "Live births Oct to Dec 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "live births_quarter3": Object {
      "column": "live births_quarter3",
      "hidden": false,
      "meta": false,
      "name": "Live births Jan to Mar 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "organisation_unit_is_parent": Object {
      "column": "organisation_unit_is_parent",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit is parent",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "organisationunitcode": Object {
      "column": "organisationunitcode",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit code",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "organisationunitid": Object {
      "column": "organisationunitid",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit ID",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "organisationunitname": Object {
      "column": "organisationunitname",
      "hidden": false,
      "meta": true,
      "name": "Organisation unit",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "quarter1": Object {
      "column": "quarter1",
      "hidden": false,
      "meta": false,
      "name": "Jul to Sep 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "quarter2": Object {
      "column": "quarter2",
      "hidden": false,
      "meta": false,
      "name": "Oct to Dec 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "quarter3": Object {
      "column": "quarter3",
      "hidden": false,
      "meta": false,
      "name": "Jan to Mar 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "quarter4": Object {
      "column": "quarter4",
      "hidden": false,
      "meta": false,
      "name": "Apr to Jun 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "reporting_month_name": Object {
      "column": "reporting_month_name",
      "hidden": true,
      "meta": true,
      "name": "Reporting month",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
  },
  "order": Array [
    "dataid",
    "dataname",
    "reporting_month_name",
    "organisation_unit_is_parent",
    "quarter1",
    "quarter2",
    "quarter3",
    "quarter4",
    "organisationunitid",
    "organisationunitname",
    "organisationunitcode",
    "live births_quarter1",
    "live births_quarter2",
    "live births_quarter3",
  ],
  "rows": Array [
    Object {
      "dataid": "gQNFkFkObU8.L4P9VSgHkF6",
      "dataname": "Live births MCH Aides, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "24404.0",
      "quarter2": "18813.0",
      "quarter3": "18079.0",
      "quarter4": "24416.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.Gmbgme7z9BF",
      "dataname": "Live births Trained TBA, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "2878.0",
      "quarter2": "1655.0",
      "quarter3": "3320.0",
      "quarter4": "3092.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.PvFFIeF2J9x",
      "dataname": "Live births CHO, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "239.0",
      "quarter2": "284.0",
      "quarter3": "204.0",
      "quarter4": "205.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.w3BcsdjOcfk",
      "dataname": "Live births CHO, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "41.0",
      "quarter2": "106.0",
      "quarter3": "178.0",
      "quarter4": "108.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.b19Ye0TWs1D",
      "dataname": "Live births MCH Aides, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "1652.0",
      "quarter2": "979.0",
      "quarter3": "2222.0",
      "quarter4": "2080.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.CYHGl18lR0W",
      "dataname": "Live births Trained TBA, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "5745.0",
      "quarter2": "3934.0",
      "quarter3": "8534.0",
      "quarter4": "6952.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.HVFCn1yjoGx",
      "dataname": "Live births Untrained TBA, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "2705.0",
      "quarter2": "1613.0",
      "quarter3": "3838.0",
      "quarter4": "2896.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.Tzg8I9KyEwd",
      "dataname": "Live births Midwives, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "1304.0",
      "quarter2": "1208.0",
      "quarter3": "868.0",
      "quarter4": "1022.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.AKQ15Z2uqit",
      "dataname": "Live births Midwives, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "269.0",
      "quarter2": "172.0",
      "quarter3": "233.0",
      "quarter4": "357.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.YEmiuCcgNQI",
      "dataname": "Live births SECHN, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "1190.0",
      "quarter2": "1057.0",
      "quarter3": "1008.0",
      "quarter4": "1171.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.MaXD86iob3M",
      "dataname": "Live births SECHN, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "225.0",
      "quarter2": "205.0",
      "quarter3": "304.0",
      "quarter4": "262.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.s3jlIgFCbUb",
      "dataname": "Live births Untrained TBA, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "474.0",
      "quarter2": "360.0",
      "quarter3": "719.0",
      "quarter4": "733.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "fbfJHSPpUQD.pq2XI5kz2BY",
      "dataname": "ANC 1st visit Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "52940.0",
      "quarter2": "42724.0",
      "quarter3": "43493.0",
      "quarter4": "60757.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "fbfJHSPpUQD.PT59n8BQbqM",
      "dataname": "ANC 1st visit Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "13728.0",
      "quarter2": "11338.0",
      "quarter3": "13965.0",
      "quarter4": "14394.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "cYeuwXTCPkU.pq2XI5kz2BY",
      "dataname": "ANC 2nd visit Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "49055.0",
      "quarter2": "40468.0",
      "quarter3": "40815.0",
      "quarter4": "53997.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "cYeuwXTCPkU.PT59n8BQbqM",
      "dataname": "ANC 2nd visit Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "12921.0",
      "quarter2": "10281.0",
      "quarter3": "13528.0",
      "quarter4": "13201.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "Jtf34kNZhzP.pq2XI5kz2BY",
      "dataname": "ANC 3rd visit Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "35333.0",
      "quarter2": "28157.0",
      "quarter3": "27208.0",
      "quarter4": "35755.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "Jtf34kNZhzP.PT59n8BQbqM",
      "dataname": "ANC 3rd visit Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "9487.0",
      "quarter2": "9179.0",
      "quarter3": "9327.0",
      "quarter4": "9551.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "hfdmMSPBgLG.pq2XI5kz2BY",
      "dataname": "ANC 4th or more Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "22854.0",
      "quarter2": "20082.0",
      "quarter3": "15982.0",
      "quarter4": "22864.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "hfdmMSPBgLG.PT59n8BQbqM",
      "dataname": "ANC 4th or more Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "5516.0",
      "quarter2": "4508.0",
      "quarter3": "4643.0",
      "quarter4": "5533.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "30.0",
      "live births_quarter2": "31.0",
      "live births_quarter3": "16.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_573",
      "organisationunitid": "jNb63DIHuwU",
      "organisationunitname": "Baoma Station CHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "35.0",
      "live births_quarter2": "35.0",
      "live births_quarter3": "43.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_73727",
      "organisationunitid": "WAjjFMDJKcx",
      "organisationunitname": "Blamawo MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "8.0",
      "live births_quarter2": "11.0",
      "live births_quarter3": "28.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_574",
      "organisationunitid": "ZpE2POxvl9P",
      "organisationunitname": "Faabu CHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "143.0",
      "live births_quarter2": "113.0",
      "live births_quarter3": "124.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_576",
      "organisationunitid": "TSyzvBiovKh",
      "organisationunitname": "Gerehun CHC",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "18.0",
      "live births_quarter2": "11.0",
      "live births_quarter3": "28.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_577",
      "organisationunitid": "azRICFoILuh",
      "organisationunitname": "Golu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "121.0",
      "live births_quarter2": "84.0",
      "live births_quarter3": "122.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_578",
      "organisationunitid": "Umh4HKqqFp6",
      "organisationunitname": "Jembe CHC",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "19.0",
      "live births_quarter2": "14.0",
      "live births_quarter3": "31.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_579",
      "organisationunitid": "RzgSFJ9E46G",
      "organisationunitname": "Jormu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "11.0",
      "live births_quarter2": "5.0",
      "live births_quarter3": "12.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_580",
      "organisationunitid": "egv5Es0QlQP",
      "organisationunitname": "Kigbai MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "25.0",
      "live births_quarter2": "15.0",
      "live births_quarter3": "8.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_678885",
      "organisationunitid": "pMEnu7BjqMz",
      "organisationunitname": "Kpumbu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "23.0",
      "live births_quarter2": "23.0",
      "live births_quarter3": "18.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_581",
      "organisationunitid": "EuoA3Crpqts",
      "organisationunitname": "Mbundorbu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "12.0",
      "live births_quarter2": "18.0",
      "live births_quarter3": "20.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_24767",
      "organisationunitid": "KfUCAQoOIae",
      "organisationunitname": "PelewahunBaomaMCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "22.0",
      "live births_quarter2": "16.0",
      "live births_quarter3": "14.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_586",
      "organisationunitid": "bG0PlyD0iP3",
      "organisationunitname": "Tugbebu CHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "31.0",
      "live births_quarter2": "25.0",
      "live births_quarter3": "47.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_583",
      "organisationunitid": "AnXoUM1tfNT",
      "organisationunitname": "Yakaji MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "58.0",
      "live births_quarter2": "54.0",
      "live births_quarter3": "27.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_585",
      "organisationunitid": "nX05QLraDhO",
      "organisationunitname": "Yamandu CHC",
      "reporting_month_name": "Jul to Sep 2017",
    },
  ],
}
`;

exports[`Repcombinator .getCombinedReportForReportUids() should resolve to a combined report 1`] = `
Object {
  "headers": Object {
    "dataid": Object {
      "column": "dataid",
      "hidden": true,
      "meta": true,
      "name": "Data ID",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "dataname": Object {
      "column": "dataname",
      "hidden": false,
      "meta": true,
      "name": "Data",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "live births_quarter1": Object {
      "column": "live births_quarter1",
      "hidden": false,
      "meta": false,
      "name": "Live births Jul to Sep 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "live births_quarter2": Object {
      "column": "live births_quarter2",
      "hidden": false,
      "meta": false,
      "name": "Live births Oct to Dec 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "live births_quarter3": Object {
      "column": "live births_quarter3",
      "hidden": false,
      "meta": false,
      "name": "Live births Jan to Mar 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "organisation_unit_is_parent": Object {
      "column": "organisation_unit_is_parent",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit is parent",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "organisationunitcode": Object {
      "column": "organisationunitcode",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit code",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "organisationunitid": Object {
      "column": "organisationunitid",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit ID",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "organisationunitname": Object {
      "column": "organisationunitname",
      "hidden": false,
      "meta": true,
      "name": "Organisation unit",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "quarter1": Object {
      "column": "quarter1",
      "hidden": false,
      "meta": false,
      "name": "Jul to Sep 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "quarter2": Object {
      "column": "quarter2",
      "hidden": false,
      "meta": false,
      "name": "Oct to Dec 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "quarter3": Object {
      "column": "quarter3",
      "hidden": false,
      "meta": false,
      "name": "Jan to Mar 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "quarter4": Object {
      "column": "quarter4",
      "hidden": false,
      "meta": false,
      "name": "Apr to Jun 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "reporting_month_name": Object {
      "column": "reporting_month_name",
      "hidden": true,
      "meta": true,
      "name": "Reporting month",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
  },
  "order": Array [
    "dataid",
    "dataname",
    "reporting_month_name",
    "organisation_unit_is_parent",
    "quarter1",
    "quarter2",
    "quarter3",
    "quarter4",
    "organisationunitid",
    "organisationunitname",
    "organisationunitcode",
    "live births_quarter1",
    "live births_quarter2",
    "live births_quarter3",
  ],
  "rows": Array [
    Object {
      "dataid": "gQNFkFkObU8.L4P9VSgHkF6",
      "dataname": "Live births MCH Aides, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "24404.0",
      "quarter2": "18813.0",
      "quarter3": "18079.0",
      "quarter4": "24416.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.Gmbgme7z9BF",
      "dataname": "Live births Trained TBA, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "2878.0",
      "quarter2": "1655.0",
      "quarter3": "3320.0",
      "quarter4": "3092.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.PvFFIeF2J9x",
      "dataname": "Live births CHO, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "239.0",
      "quarter2": "284.0",
      "quarter3": "204.0",
      "quarter4": "205.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.w3BcsdjOcfk",
      "dataname": "Live births CHO, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "41.0",
      "quarter2": "106.0",
      "quarter3": "178.0",
      "quarter4": "108.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.b19Ye0TWs1D",
      "dataname": "Live births MCH Aides, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "1652.0",
      "quarter2": "979.0",
      "quarter3": "2222.0",
      "quarter4": "2080.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.CYHGl18lR0W",
      "dataname": "Live births Trained TBA, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "5745.0",
      "quarter2": "3934.0",
      "quarter3": "8534.0",
      "quarter4": "6952.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.HVFCn1yjoGx",
      "dataname": "Live births Untrained TBA, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "2705.0",
      "quarter2": "1613.0",
      "quarter3": "3838.0",
      "quarter4": "2896.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.Tzg8I9KyEwd",
      "dataname": "Live births Midwives, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "1304.0",
      "quarter2": "1208.0",
      "quarter3": "868.0",
      "quarter4": "1022.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.AKQ15Z2uqit",
      "dataname": "Live births Midwives, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "269.0",
      "quarter2": "172.0",
      "quarter3": "233.0",
      "quarter4": "357.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.YEmiuCcgNQI",
      "dataname": "Live births SECHN, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "1190.0",
      "quarter2": "1057.0",
      "quarter3": "1008.0",
      "quarter4": "1171.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.MaXD86iob3M",
      "dataname": "Live births SECHN, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "225.0",
      "quarter2": "205.0",
      "quarter3": "304.0",
      "quarter4": "262.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.s3jlIgFCbUb",
      "dataname": "Live births Untrained TBA, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "474.0",
      "quarter2": "360.0",
      "quarter3": "719.0",
      "quarter4": "733.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "fbfJHSPpUQD.pq2XI5kz2BY",
      "dataname": "ANC 1st visit Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "52940.0",
      "quarter2": "42724.0",
      "quarter3": "43493.0",
      "quarter4": "60757.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "fbfJHSPpUQD.PT59n8BQbqM",
      "dataname": "ANC 1st visit Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "13728.0",
      "quarter2": "11338.0",
      "quarter3": "13965.0",
      "quarter4": "14394.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "cYeuwXTCPkU.pq2XI5kz2BY",
      "dataname": "ANC 2nd visit Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "49055.0",
      "quarter2": "40468.0",
      "quarter3": "40815.0",
      "quarter4": "53997.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "cYeuwXTCPkU.PT59n8BQbqM",
      "dataname": "ANC 2nd visit Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "12921.0",
      "quarter2": "10281.0",
      "quarter3": "13528.0",
      "quarter4": "13201.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "Jtf34kNZhzP.pq2XI5kz2BY",
      "dataname": "ANC 3rd visit Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "35333.0",
      "quarter2": "28157.0",
      "quarter3": "27208.0",
      "quarter4": "35755.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "Jtf34kNZhzP.PT59n8BQbqM",
      "dataname": "ANC 3rd visit Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "9487.0",
      "quarter2": "9179.0",
      "quarter3": "9327.0",
      "quarter4": "9551.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "hfdmMSPBgLG.pq2XI5kz2BY",
      "dataname": "ANC 4th or more Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "22854.0",
      "quarter2": "20082.0",
      "quarter3": "15982.0",
      "quarter4": "22864.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "hfdmMSPBgLG.PT59n8BQbqM",
      "dataname": "ANC 4th or more Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "5516.0",
      "quarter2": "4508.0",
      "quarter3": "4643.0",
      "quarter4": "5533.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "30.0",
      "live births_quarter2": "31.0",
      "live births_quarter3": "16.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_573",
      "organisationunitid": "jNb63DIHuwU",
      "organisationunitname": "Baoma Station CHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "35.0",
      "live births_quarter2": "35.0",
      "live births_quarter3": "43.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_73727",
      "organisationunitid": "WAjjFMDJKcx",
      "organisationunitname": "Blamawo MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "8.0",
      "live births_quarter2": "11.0",
      "live births_quarter3": "28.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_574",
      "organisationunitid": "ZpE2POxvl9P",
      "organisationunitname": "Faabu CHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "143.0",
      "live births_quarter2": "113.0",
      "live births_quarter3": "124.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_576",
      "organisationunitid": "TSyzvBiovKh",
      "organisationunitname": "Gerehun CHC",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "18.0",
      "live births_quarter2": "11.0",
      "live births_quarter3": "28.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_577",
      "organisationunitid": "azRICFoILuh",
      "organisationunitname": "Golu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "121.0",
      "live births_quarter2": "84.0",
      "live births_quarter3": "122.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_578",
      "organisationunitid": "Umh4HKqqFp6",
      "organisationunitname": "Jembe CHC",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "19.0",
      "live births_quarter2": "14.0",
      "live births_quarter3": "31.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_579",
      "organisationunitid": "RzgSFJ9E46G",
      "organisationunitname": "Jormu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "11.0",
      "live births_quarter2": "5.0",
      "live births_quarter3": "12.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_580",
      "organisationunitid": "egv5Es0QlQP",
      "organisationunitname": "Kigbai MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "25.0",
      "live births_quarter2": "15.0",
      "live births_quarter3": "8.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_678885",
      "organisationunitid": "pMEnu7BjqMz",
      "organisationunitname": "Kpumbu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "23.0",
      "live births_quarter2": "23.0",
      "live births_quarter3": "18.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_581",
      "organisationunitid": "EuoA3Crpqts",
      "organisationunitname": "Mbundorbu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "12.0",
      "live births_quarter2": "18.0",
      "live births_quarter3": "20.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_24767",
      "organisationunitid": "KfUCAQoOIae",
      "organisationunitname": "PelewahunBaomaMCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "22.0",
      "live births_quarter2": "16.0",
      "live births_quarter3": "14.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_586",
      "organisationunitid": "bG0PlyD0iP3",
      "organisationunitname": "Tugbebu CHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "31.0",
      "live births_quarter2": "25.0",
      "live births_quarter3": "47.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_583",
      "organisationunitid": "AnXoUM1tfNT",
      "organisationunitname": "Yakaji MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "58.0",
      "live births_quarter2": "54.0",
      "live births_quarter3": "27.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_585",
      "organisationunitid": "nX05QLraDhO",
      "organisationunitname": "Yamandu CHC",
      "reporting_month_name": "Jul to Sep 2017",
    },
  ],
}
`;

exports[`Repcombinator .getObjectBasedReport() should return a report in object format 1`] = `
Object {
  "headerOrder": Array [
    "dataid",
    "dataname",
    "reporting_month_name",
    "organisation_unit_is_parent",
    "quarter1",
    "quarter2",
    "quarter3",
    "quarter4",
  ],
  "headers": Array [
    Object {
      "column": "dataid",
      "hidden": true,
      "meta": true,
      "name": "Data ID",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "dataname",
      "hidden": false,
      "meta": true,
      "name": "Data",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "reporting_month_name",
      "hidden": true,
      "meta": true,
      "name": "Reporting month",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "organisation_unit_is_parent",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit is parent",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "quarter1",
      "hidden": false,
      "meta": false,
      "name": "Jul to Sep 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    Object {
      "column": "quarter2",
      "hidden": false,
      "meta": false,
      "name": "Oct to Dec 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    Object {
      "column": "quarter3",
      "hidden": false,
      "meta": false,
      "name": "Jan to Mar 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    Object {
      "column": "quarter4",
      "hidden": false,
      "meta": false,
      "name": "Apr to Jun 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
  ],
  "headersMap": Object {
    "dataid": Object {
      "column": "dataid",
      "hidden": true,
      "meta": true,
      "name": "Data ID",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "dataname": Object {
      "column": "dataname",
      "hidden": false,
      "meta": true,
      "name": "Data",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "organisation_unit_is_parent": Object {
      "column": "organisation_unit_is_parent",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit is parent",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "quarter1": Object {
      "column": "quarter1",
      "hidden": false,
      "meta": false,
      "name": "Jul to Sep 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "quarter2": Object {
      "column": "quarter2",
      "hidden": false,
      "meta": false,
      "name": "Oct to Dec 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "quarter3": Object {
      "column": "quarter3",
      "hidden": false,
      "meta": false,
      "name": "Jan to Mar 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "quarter4": Object {
      "column": "quarter4",
      "hidden": false,
      "meta": false,
      "name": "Apr to Jun 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "reporting_month_name": Object {
      "column": "reporting_month_name",
      "hidden": true,
      "meta": true,
      "name": "Reporting month",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
  },
  "height": 20,
  "objectRows": Array [
    Object {
      "dataid": "gQNFkFkObU8.L4P9VSgHkF6",
      "dataname": "Live births MCH Aides, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "24404.0",
      "quarter2": "18813.0",
      "quarter3": "18079.0",
      "quarter4": "24416.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.Gmbgme7z9BF",
      "dataname": "Live births Trained TBA, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "2878.0",
      "quarter2": "1655.0",
      "quarter3": "3320.0",
      "quarter4": "3092.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.PvFFIeF2J9x",
      "dataname": "Live births CHO, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "239.0",
      "quarter2": "284.0",
      "quarter3": "204.0",
      "quarter4": "205.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.w3BcsdjOcfk",
      "dataname": "Live births CHO, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "41.0",
      "quarter2": "106.0",
      "quarter3": "178.0",
      "quarter4": "108.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.b19Ye0TWs1D",
      "dataname": "Live births MCH Aides, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "1652.0",
      "quarter2": "979.0",
      "quarter3": "2222.0",
      "quarter4": "2080.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.CYHGl18lR0W",
      "dataname": "Live births Trained TBA, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "5745.0",
      "quarter2": "3934.0",
      "quarter3": "8534.0",
      "quarter4": "6952.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.HVFCn1yjoGx",
      "dataname": "Live births Untrained TBA, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "2705.0",
      "quarter2": "1613.0",
      "quarter3": "3838.0",
      "quarter4": "2896.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.Tzg8I9KyEwd",
      "dataname": "Live births Midwives, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "1304.0",
      "quarter2": "1208.0",
      "quarter3": "868.0",
      "quarter4": "1022.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.AKQ15Z2uqit",
      "dataname": "Live births Midwives, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "269.0",
      "quarter2": "172.0",
      "quarter3": "233.0",
      "quarter4": "357.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.YEmiuCcgNQI",
      "dataname": "Live births SECHN, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "1190.0",
      "quarter2": "1057.0",
      "quarter3": "1008.0",
      "quarter4": "1171.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.MaXD86iob3M",
      "dataname": "Live births SECHN, In Community",
      "organisation_unit_is_parent": "No",
      "quarter1": "225.0",
      "quarter2": "205.0",
      "quarter3": "304.0",
      "quarter4": "262.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "gQNFkFkObU8.s3jlIgFCbUb",
      "dataname": "Live births Untrained TBA, At PHU",
      "organisation_unit_is_parent": "No",
      "quarter1": "474.0",
      "quarter2": "360.0",
      "quarter3": "719.0",
      "quarter4": "733.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "fbfJHSPpUQD.pq2XI5kz2BY",
      "dataname": "ANC 1st visit Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "52940.0",
      "quarter2": "42724.0",
      "quarter3": "43493.0",
      "quarter4": "60757.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "fbfJHSPpUQD.PT59n8BQbqM",
      "dataname": "ANC 1st visit Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "13728.0",
      "quarter2": "11338.0",
      "quarter3": "13965.0",
      "quarter4": "14394.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "cYeuwXTCPkU.pq2XI5kz2BY",
      "dataname": "ANC 2nd visit Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "49055.0",
      "quarter2": "40468.0",
      "quarter3": "40815.0",
      "quarter4": "53997.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "cYeuwXTCPkU.PT59n8BQbqM",
      "dataname": "ANC 2nd visit Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "12921.0",
      "quarter2": "10281.0",
      "quarter3": "13528.0",
      "quarter4": "13201.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "Jtf34kNZhzP.pq2XI5kz2BY",
      "dataname": "ANC 3rd visit Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "35333.0",
      "quarter2": "28157.0",
      "quarter3": "27208.0",
      "quarter4": "35755.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "Jtf34kNZhzP.PT59n8BQbqM",
      "dataname": "ANC 3rd visit Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "9487.0",
      "quarter2": "9179.0",
      "quarter3": "9327.0",
      "quarter4": "9551.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "hfdmMSPBgLG.pq2XI5kz2BY",
      "dataname": "ANC 4th or more Fixed",
      "organisation_unit_is_parent": "No",
      "quarter1": "22854.0",
      "quarter2": "20082.0",
      "quarter3": "15982.0",
      "quarter4": "22864.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "dataid": "hfdmMSPBgLG.PT59n8BQbqM",
      "dataname": "ANC 4th or more Outreach",
      "organisation_unit_is_parent": "No",
      "quarter1": "5516.0",
      "quarter2": "4508.0",
      "quarter3": "4643.0",
      "quarter4": "5533.0",
      "reporting_month_name": "Jul to Sep 2017",
    },
  ],
  "subtitle": "Sierra Leone",
  "title": "Delivery: Live births and ANC visits last quarter",
  "width": 11,
}
`;

exports[`Repcombinator .getObjectBasedReport() should return a report in object format with multiple rows 1`] = `
Object {
  "headerOrder": Array [
    "organisationunitid",
    "organisationunitname",
    "organisationunitcode",
    "reporting_month_name",
    "organisation_unit_is_parent",
    "live births_quarter1",
    "live births_quarter2",
    "live births_quarter3",
  ],
  "headers": Array [
    Object {
      "column": "organisationunitid",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit ID",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "organisationunitname",
      "hidden": false,
      "meta": true,
      "name": "Organisation unit",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "organisationunitcode",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit code",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "reporting_month_name",
      "hidden": true,
      "meta": true,
      "name": "Reporting month",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "organisation_unit_is_parent",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit is parent",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "live births_quarter1",
      "hidden": false,
      "meta": false,
      "name": "Live births Jul to Sep 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    Object {
      "column": "live births_quarter2",
      "hidden": false,
      "meta": false,
      "name": "Live births Oct to Dec 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    Object {
      "column": "live births_quarter3",
      "hidden": false,
      "meta": false,
      "name": "Live births Jan to Mar 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
  ],
  "headersMap": Object {
    "live births_quarter1": Object {
      "column": "live births_quarter1",
      "hidden": false,
      "meta": false,
      "name": "Live births Jul to Sep 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "live births_quarter2": Object {
      "column": "live births_quarter2",
      "hidden": false,
      "meta": false,
      "name": "Live births Oct to Dec 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "live births_quarter3": Object {
      "column": "live births_quarter3",
      "hidden": false,
      "meta": false,
      "name": "Live births Jan to Mar 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    "organisation_unit_is_parent": Object {
      "column": "organisation_unit_is_parent",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit is parent",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "organisationunitcode": Object {
      "column": "organisationunitcode",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit code",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "organisationunitid": Object {
      "column": "organisationunitid",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit ID",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "organisationunitname": Object {
      "column": "organisationunitname",
      "hidden": false,
      "meta": true,
      "name": "Organisation unit",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    "reporting_month_name": Object {
      "column": "reporting_month_name",
      "hidden": true,
      "meta": true,
      "name": "Reporting month",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
  },
  "height": 14,
  "objectRows": Array [
    Object {
      "live births_quarter1": "30.0",
      "live births_quarter2": "31.0",
      "live births_quarter3": "16.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_573",
      "organisationunitid": "jNb63DIHuwU",
      "organisationunitname": "Baoma Station CHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "35.0",
      "live births_quarter2": "35.0",
      "live births_quarter3": "43.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_73727",
      "organisationunitid": "WAjjFMDJKcx",
      "organisationunitname": "Blamawo MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "8.0",
      "live births_quarter2": "11.0",
      "live births_quarter3": "28.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_574",
      "organisationunitid": "ZpE2POxvl9P",
      "organisationunitname": "Faabu CHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "143.0",
      "live births_quarter2": "113.0",
      "live births_quarter3": "124.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_576",
      "organisationunitid": "TSyzvBiovKh",
      "organisationunitname": "Gerehun CHC",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "18.0",
      "live births_quarter2": "11.0",
      "live births_quarter3": "28.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_577",
      "organisationunitid": "azRICFoILuh",
      "organisationunitname": "Golu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "121.0",
      "live births_quarter2": "84.0",
      "live births_quarter3": "122.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_578",
      "organisationunitid": "Umh4HKqqFp6",
      "organisationunitname": "Jembe CHC",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "19.0",
      "live births_quarter2": "14.0",
      "live births_quarter3": "31.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_579",
      "organisationunitid": "RzgSFJ9E46G",
      "organisationunitname": "Jormu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "11.0",
      "live births_quarter2": "5.0",
      "live births_quarter3": "12.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_580",
      "organisationunitid": "egv5Es0QlQP",
      "organisationunitname": "Kigbai MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "25.0",
      "live births_quarter2": "15.0",
      "live births_quarter3": "8.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_678885",
      "organisationunitid": "pMEnu7BjqMz",
      "organisationunitname": "Kpumbu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "23.0",
      "live births_quarter2": "23.0",
      "live births_quarter3": "18.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_581",
      "organisationunitid": "EuoA3Crpqts",
      "organisationunitname": "Mbundorbu MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "12.0",
      "live births_quarter2": "18.0",
      "live births_quarter3": "20.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_24767",
      "organisationunitid": "KfUCAQoOIae",
      "organisationunitname": "PelewahunBaomaMCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "22.0",
      "live births_quarter2": "16.0",
      "live births_quarter3": "14.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_586",
      "organisationunitid": "bG0PlyD0iP3",
      "organisationunitname": "Tugbebu CHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "31.0",
      "live births_quarter2": "25.0",
      "live births_quarter3": "47.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_583",
      "organisationunitid": "AnXoUM1tfNT",
      "organisationunitname": "Yakaji MCHP",
      "reporting_month_name": "Jul to Sep 2017",
    },
    Object {
      "live births_quarter1": "58.0",
      "live births_quarter2": "54.0",
      "live births_quarter3": "27.0",
      "organisation_unit_is_parent": "No",
      "organisationunitcode": "OU_585",
      "organisationunitid": "nX05QLraDhO",
      "organisationunitname": "Yamandu CHC",
      "reporting_month_name": "Jul to Sep 2017",
    },
  ],
  "title": "Delivery: Live births in facilities last 4 quarters",
  "width": 11,
}
`;

exports[`Repcombinator .requestReport() should return the report payload when the report was found 1`] = `
Object {
  "headers": Array [
    Object {
      "column": "dataid",
      "hidden": true,
      "meta": true,
      "name": "Data ID",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "dataname",
      "hidden": false,
      "meta": true,
      "name": "Data",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "reporting_month_name",
      "hidden": true,
      "meta": true,
      "name": "Reporting month",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "organisation_unit_is_parent",
      "hidden": true,
      "meta": true,
      "name": "Organisation unit is parent",
      "type": "java.lang.String",
      "valueType": "TEXT",
    },
    Object {
      "column": "quarter1",
      "hidden": false,
      "meta": false,
      "name": "Jul to Sep 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    Object {
      "column": "quarter2",
      "hidden": false,
      "meta": false,
      "name": "Oct to Dec 2016",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    Object {
      "column": "quarter3",
      "hidden": false,
      "meta": false,
      "name": "Jan to Mar 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
    Object {
      "column": "quarter4",
      "hidden": false,
      "meta": false,
      "name": "Apr to Jun 2017",
      "type": "java.lang.Double",
      "valueType": "NUMBER",
    },
  ],
  "height": 20,
  "rows": Array [
    Array [
      "gQNFkFkObU8.L4P9VSgHkF6",
      "Live births MCH Aides, At PHU",
      "Jul to Sep 2017",
      "No",
      "24404.0",
      "18813.0",
      "18079.0",
      "24416.0",
    ],
    Array [
      "gQNFkFkObU8.Gmbgme7z9BF",
      "Live births Trained TBA, At PHU",
      "Jul to Sep 2017",
      "No",
      "2878.0",
      "1655.0",
      "3320.0",
      "3092.0",
    ],
    Array [
      "gQNFkFkObU8.PvFFIeF2J9x",
      "Live births CHO, At PHU",
      "Jul to Sep 2017",
      "No",
      "239.0",
      "284.0",
      "204.0",
      "205.0",
    ],
    Array [
      "gQNFkFkObU8.w3BcsdjOcfk",
      "Live births CHO, In Community",
      "Jul to Sep 2017",
      "No",
      "41.0",
      "106.0",
      "178.0",
      "108.0",
    ],
    Array [
      "gQNFkFkObU8.b19Ye0TWs1D",
      "Live births MCH Aides, In Community",
      "Jul to Sep 2017",
      "No",
      "1652.0",
      "979.0",
      "2222.0",
      "2080.0",
    ],
    Array [
      "gQNFkFkObU8.CYHGl18lR0W",
      "Live births Trained TBA, In Community",
      "Jul to Sep 2017",
      "No",
      "5745.0",
      "3934.0",
      "8534.0",
      "6952.0",
    ],
    Array [
      "gQNFkFkObU8.HVFCn1yjoGx",
      "Live births Untrained TBA, In Community",
      "Jul to Sep 2017",
      "No",
      "2705.0",
      "1613.0",
      "3838.0",
      "2896.0",
    ],
    Array [
      "gQNFkFkObU8.Tzg8I9KyEwd",
      "Live births Midwives, At PHU",
      "Jul to Sep 2017",
      "No",
      "1304.0",
      "1208.0",
      "868.0",
      "1022.0",
    ],
    Array [
      "gQNFkFkObU8.AKQ15Z2uqit",
      "Live births Midwives, In Community",
      "Jul to Sep 2017",
      "No",
      "269.0",
      "172.0",
      "233.0",
      "357.0",
    ],
    Array [
      "gQNFkFkObU8.YEmiuCcgNQI",
      "Live births SECHN, At PHU",
      "Jul to Sep 2017",
      "No",
      "1190.0",
      "1057.0",
      "1008.0",
      "1171.0",
    ],
    Array [
      "gQNFkFkObU8.MaXD86iob3M",
      "Live births SECHN, In Community",
      "Jul to Sep 2017",
      "No",
      "225.0",
      "205.0",
      "304.0",
      "262.0",
    ],
    Array [
      "gQNFkFkObU8.s3jlIgFCbUb",
      "Live births Untrained TBA, At PHU",
      "Jul to Sep 2017",
      "No",
      "474.0",
      "360.0",
      "719.0",
      "733.0",
    ],
    Array [
      "fbfJHSPpUQD.pq2XI5kz2BY",
      "ANC 1st visit Fixed",
      "Jul to Sep 2017",
      "No",
      "52940.0",
      "42724.0",
      "43493.0",
      "60757.0",
    ],
    Array [
      "fbfJHSPpUQD.PT59n8BQbqM",
      "ANC 1st visit Outreach",
      "Jul to Sep 2017",
      "No",
      "13728.0",
      "11338.0",
      "13965.0",
      "14394.0",
    ],
    Array [
      "cYeuwXTCPkU.pq2XI5kz2BY",
      "ANC 2nd visit Fixed",
      "Jul to Sep 2017",
      "No",
      "49055.0",
      "40468.0",
      "40815.0",
      "53997.0",
    ],
    Array [
      "cYeuwXTCPkU.PT59n8BQbqM",
      "ANC 2nd visit Outreach",
      "Jul to Sep 2017",
      "No",
      "12921.0",
      "10281.0",
      "13528.0",
      "13201.0",
    ],
    Array [
      "Jtf34kNZhzP.pq2XI5kz2BY",
      "ANC 3rd visit Fixed",
      "Jul to Sep 2017",
      "No",
      "35333.0",
      "28157.0",
      "27208.0",
      "35755.0",
    ],
    Array [
      "Jtf34kNZhzP.PT59n8BQbqM",
      "ANC 3rd visit Outreach",
      "Jul to Sep 2017",
      "No",
      "9487.0",
      "9179.0",
      "9327.0",
      "9551.0",
    ],
    Array [
      "hfdmMSPBgLG.pq2XI5kz2BY",
      "ANC 4th or more Fixed",
      "Jul to Sep 2017",
      "No",
      "22854.0",
      "20082.0",
      "15982.0",
      "22864.0",
    ],
    Array [
      "hfdmMSPBgLG.PT59n8BQbqM",
      "ANC 4th or more Outreach",
      "Jul to Sep 2017",
      "No",
      "5516.0",
      "4508.0",
      "4643.0",
      "5533.0",
    ],
  ],
  "subtitle": "Sierra Leone",
  "title": "Delivery: Live births and ANC visits last quarter",
  "width": 11,
}
`;

exports[`Repcombinator .requestReports() should return a list of reports when all reports are loaded 1`] = `
Array [
  Object {
    "headers": Array [
      Object {
        "column": "dataid",
        "hidden": true,
        "meta": true,
        "name": "Data ID",
        "type": "java.lang.String",
        "valueType": "TEXT",
      },
      Object {
        "column": "dataname",
        "hidden": false,
        "meta": true,
        "name": "Data",
        "type": "java.lang.String",
        "valueType": "TEXT",
      },
      Object {
        "column": "reporting_month_name",
        "hidden": true,
        "meta": true,
        "name": "Reporting month",
        "type": "java.lang.String",
        "valueType": "TEXT",
      },
      Object {
        "column": "organisation_unit_is_parent",
        "hidden": true,
        "meta": true,
        "name": "Organisation unit is parent",
        "type": "java.lang.String",
        "valueType": "TEXT",
      },
      Object {
        "column": "quarter1",
        "hidden": false,
        "meta": false,
        "name": "Jul to Sep 2016",
        "type": "java.lang.Double",
        "valueType": "NUMBER",
      },
      Object {
        "column": "quarter2",
        "hidden": false,
        "meta": false,
        "name": "Oct to Dec 2016",
        "type": "java.lang.Double",
        "valueType": "NUMBER",
      },
      Object {
        "column": "quarter3",
        "hidden": false,
        "meta": false,
        "name": "Jan to Mar 2017",
        "type": "java.lang.Double",
        "valueType": "NUMBER",
      },
      Object {
        "column": "quarter4",
        "hidden": false,
        "meta": false,
        "name": "Apr to Jun 2017",
        "type": "java.lang.Double",
        "valueType": "NUMBER",
      },
    ],
    "height": 20,
    "rows": Array [
      Array [
        "gQNFkFkObU8.L4P9VSgHkF6",
        "Live births MCH Aides, At PHU",
        "Jul to Sep 2017",
        "No",
        "24404.0",
        "18813.0",
        "18079.0",
        "24416.0",
      ],
      Array [
        "gQNFkFkObU8.Gmbgme7z9BF",
        "Live births Trained TBA, At PHU",
        "Jul to Sep 2017",
        "No",
        "2878.0",
        "1655.0",
        "3320.0",
        "3092.0",
      ],
      Array [
        "gQNFkFkObU8.PvFFIeF2J9x",
        "Live births CHO, At PHU",
        "Jul to Sep 2017",
        "No",
        "239.0",
        "284.0",
        "204.0",
        "205.0",
      ],
      Array [
        "gQNFkFkObU8.w3BcsdjOcfk",
        "Live births CHO, In Community",
        "Jul to Sep 2017",
        "No",
        "41.0",
        "106.0",
        "178.0",
        "108.0",
      ],
      Array [
        "gQNFkFkObU8.b19Ye0TWs1D",
        "Live births MCH Aides, In Community",
        "Jul to Sep 2017",
        "No",
        "1652.0",
        "979.0",
        "2222.0",
        "2080.0",
      ],
      Array [
        "gQNFkFkObU8.CYHGl18lR0W",
        "Live births Trained TBA, In Community",
        "Jul to Sep 2017",
        "No",
        "5745.0",
        "3934.0",
        "8534.0",
        "6952.0",
      ],
      Array [
        "gQNFkFkObU8.HVFCn1yjoGx",
        "Live births Untrained TBA, In Community",
        "Jul to Sep 2017",
        "No",
        "2705.0",
        "1613.0",
        "3838.0",
        "2896.0",
      ],
      Array [
        "gQNFkFkObU8.Tzg8I9KyEwd",
        "Live births Midwives, At PHU",
        "Jul to Sep 2017",
        "No",
        "1304.0",
        "1208.0",
        "868.0",
        "1022.0",
      ],
      Array [
        "gQNFkFkObU8.AKQ15Z2uqit",
        "Live births Midwives, In Community",
        "Jul to Sep 2017",
        "No",
        "269.0",
        "172.0",
        "233.0",
        "357.0",
      ],
      Array [
        "gQNFkFkObU8.YEmiuCcgNQI",
        "Live births SECHN, At PHU",
        "Jul to Sep 2017",
        "No",
        "1190.0",
        "1057.0",
        "1008.0",
        "1171.0",
      ],
      Array [
        "gQNFkFkObU8.MaXD86iob3M",
        "Live births SECHN, In Community",
        "Jul to Sep 2017",
        "No",
        "225.0",
        "205.0",
        "304.0",
        "262.0",
      ],
      Array [
        "gQNFkFkObU8.s3jlIgFCbUb",
        "Live births Untrained TBA, At PHU",
        "Jul to Sep 2017",
        "No",
        "474.0",
        "360.0",
        "719.0",
        "733.0",
      ],
      Array [
        "fbfJHSPpUQD.pq2XI5kz2BY",
        "ANC 1st visit Fixed",
        "Jul to Sep 2017",
        "No",
        "52940.0",
        "42724.0",
        "43493.0",
        "60757.0",
      ],
      Array [
        "fbfJHSPpUQD.PT59n8BQbqM",
        "ANC 1st visit Outreach",
        "Jul to Sep 2017",
        "No",
        "13728.0",
        "11338.0",
        "13965.0",
        "14394.0",
      ],
      Array [
        "cYeuwXTCPkU.pq2XI5kz2BY",
        "ANC 2nd visit Fixed",
        "Jul to Sep 2017",
        "No",
        "49055.0",
        "40468.0",
        "40815.0",
        "53997.0",
      ],
      Array [
        "cYeuwXTCPkU.PT59n8BQbqM",
        "ANC 2nd visit Outreach",
        "Jul to Sep 2017",
        "No",
        "12921.0",
        "10281.0",
        "13528.0",
        "13201.0",
      ],
      Array [
        "Jtf34kNZhzP.pq2XI5kz2BY",
        "ANC 3rd visit Fixed",
        "Jul to Sep 2017",
        "No",
        "35333.0",
        "28157.0",
        "27208.0",
        "35755.0",
      ],
      Array [
        "Jtf34kNZhzP.PT59n8BQbqM",
        "ANC 3rd visit Outreach",
        "Jul to Sep 2017",
        "No",
        "9487.0",
        "9179.0",
        "9327.0",
        "9551.0",
      ],
      Array [
        "hfdmMSPBgLG.pq2XI5kz2BY",
        "ANC 4th or more Fixed",
        "Jul to Sep 2017",
        "No",
        "22854.0",
        "20082.0",
        "15982.0",
        "22864.0",
      ],
      Array [
        "hfdmMSPBgLG.PT59n8BQbqM",
        "ANC 4th or more Outreach",
        "Jul to Sep 2017",
        "No",
        "5516.0",
        "4508.0",
        "4643.0",
        "5533.0",
      ],
    ],
    "subtitle": "Sierra Leone",
    "title": "Delivery: Live births and ANC visits last quarter",
    "width": 11,
  },
  Object {
    "headers": Array [
      Object {
        "column": "organisationunitid",
        "hidden": true,
        "meta": true,
        "name": "Organisation unit ID",
        "type": "java.lang.String",
        "valueType": "TEXT",
      },
      Object {
        "column": "organisationunitname",
        "hidden": false,
        "meta": true,
        "name": "Organisation unit",
        "type": "java.lang.String",
        "valueType": "TEXT",
      },
      Object {
        "column": "organisationunitcode",
        "hidden": true,
        "meta": true,
        "name": "Organisation unit code",
        "type": "java.lang.String",
        "valueType": "TEXT",
      },
      Object {
        "column": "reporting_month_name",
        "hidden": true,
        "meta": true,
        "name": "Reporting month",
        "type": "java.lang.String",
        "valueType": "TEXT",
      },
      Object {
        "column": "organisation_unit_is_parent",
        "hidden": true,
        "meta": true,
        "name": "Organisation unit is parent",
        "type": "java.lang.String",
        "valueType": "TEXT",
      },
      Object {
        "column": "live births_quarter1",
        "hidden": false,
        "meta": false,
        "name": "Live births Jul to Sep 2016",
        "type": "java.lang.Double",
        "valueType": "NUMBER",
      },
      Object {
        "column": "live births_quarter2",
        "hidden": false,
        "meta": false,
        "name": "Live births Oct to Dec 2016",
        "type": "java.lang.Double",
        "valueType": "NUMBER",
      },
      Object {
        "column": "live births_quarter3",
        "hidden": false,
        "meta": false,
        "name": "Live births Jan to Mar 2017",
        "type": "java.lang.Double",
        "valueType": "NUMBER",
      },
    ],
    "height": 14,
    "rows": Array [
      Array [
        "jNb63DIHuwU",
        "Baoma Station CHP",
        "OU_573",
        "Jul to Sep 2017",
        "No",
        "30.0",
        "31.0",
        "16.0",
      ],
      Array [
        "WAjjFMDJKcx",
        "Blamawo MCHP",
        "OU_73727",
        "Jul to Sep 2017",
        "No",
        "35.0",
        "35.0",
        "43.0",
      ],
      Array [
        "ZpE2POxvl9P",
        "Faabu CHP",
        "OU_574",
        "Jul to Sep 2017",
        "No",
        "8.0",
        "11.0",
        "28.0",
      ],
      Array [
        "TSyzvBiovKh",
        "Gerehun CHC",
        "OU_576",
        "Jul to Sep 2017",
        "No",
        "143.0",
        "113.0",
        "124.0",
      ],
      Array [
        "azRICFoILuh",
        "Golu MCHP",
        "OU_577",
        "Jul to Sep 2017",
        "No",
        "18.0",
        "11.0",
        "28.0",
      ],
      Array [
        "Umh4HKqqFp6",
        "Jembe CHC",
        "OU_578",
        "Jul to Sep 2017",
        "No",
        "121.0",
        "84.0",
        "122.0",
      ],
      Array [
        "RzgSFJ9E46G",
        "Jormu MCHP",
        "OU_579",
        "Jul to Sep 2017",
        "No",
        "19.0",
        "14.0",
        "31.0",
      ],
      Array [
        "egv5Es0QlQP",
        "Kigbai MCHP",
        "OU_580",
        "Jul to Sep 2017",
        "No",
        "11.0",
        "5.0",
        "12.0",
      ],
      Array [
        "pMEnu7BjqMz",
        "Kpumbu MCHP",
        "OU_678885",
        "Jul to Sep 2017",
        "No",
        "25.0",
        "15.0",
        "8.0",
      ],
      Array [
        "EuoA3Crpqts",
        "Mbundorbu MCHP",
        "OU_581",
        "Jul to Sep 2017",
        "No",
        "23.0",
        "23.0",
        "18.0",
      ],
      Array [
        "KfUCAQoOIae",
        "PelewahunBaomaMCHP",
        "OU_24767",
        "Jul to Sep 2017",
        "No",
        "12.0",
        "18.0",
        "20.0",
      ],
      Array [
        "bG0PlyD0iP3",
        "Tugbebu CHP",
        "OU_586",
        "Jul to Sep 2017",
        "No",
        "22.0",
        "16.0",
        "14.0",
      ],
      Array [
        "AnXoUM1tfNT",
        "Yakaji MCHP",
        "OU_583",
        "Jul to Sep 2017",
        "No",
        "31.0",
        "25.0",
        "47.0",
      ],
      Array [
        "nX05QLraDhO",
        "Yamandu CHC",
        "OU_585",
        "Jul to Sep 2017",
        "No",
        "58.0",
        "54.0",
        "27.0",
      ],
    ],
    "title": "Delivery: Live births in facilities last 4 quarters",
    "width": 11,
  },
]
`;
